--- a/Multimedia-HTMLSinco/index.html
+++ b/Multimedia-HTMLSinco/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Froot wars</title>
+    <title>Apocalypse</title>
     <script src="assets/js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="assets/js/Box2dWeb-2.1.a.3.min.js" type="text/javascript" charset="utf-8"></script>    
     <script src="assets/js/game.js" type="text/javascript" charset="utf-8"></script>
