--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -12,6 +12,7 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="./images/favicon.png">
 	</head>
 	<body class="is-preload">
 
