--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -23,7 +23,7 @@
 					<section class="intro">
 						<header>
 							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<p>A free responsive site template designed by <a href="https://twitter.com/alexibro">@alexibro</a> / <a href="https://twitter.com/Mayonaiss1">@Mayonaiss1</a> / <a href="https://html5up.net">HTML5 UP</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
