--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Paradigm Shift by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Gotham Ciudad De Vacaciones</title>
@@ -15,25 +10,19 @@
 		<link rel="icon" href="./images/favicon.png">
 	</head>
 	<body class="is-preload">
-
-		<!-- Wrapper -->
 			<div id="wrapper">
-
-				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/alexibro">@alexibro</a> / <a href="https://twitter.com/Mayonaiss1">@Mayonaiss1</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<h1>Gotham, ciudad de vacaciones</h1>
+							<p>Gotham, cuidad de heroes y villanos, ciudad de aventura y de disfrute, una de las mejores experiencias que se puede tener de vacaciones.</p>
 							<ul class="actions">
-								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+								<li><a href="#first" class="arrow scrolly"><img src="images/arrow-down.png" alt="" /><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/gotham-city.jpg" alt=""/></span>
 						</div>
 					</section>
-
-				<!-- Section -->
 					<section id="first">
 						<header>
 							<h2>Magna sed nullam nisl adipiscing</h2>
