--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -14,7 +14,7 @@
 					<section class="intro">
 						<header>
 							<h1>Gotham, ciudad de vacaciones</h1>
-							<p>Gotham, cuidad de heroes y villanos, ciudad de aventura y de disfrute, una de las mejores experiencias que se puede tener de vacaciones.</p>
+							<p>Gotham, cuidad de héroes y villanos, ciudad de aventura y de disfrute, una de las mejores experiencias que se puede tener de vacaciones.</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><img src="images/arrow-down.png" alt="" /><span class="label">Next</span></a></li>
 							</ul>
@@ -25,10 +25,11 @@
 					</section>
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>Ciudad histórica</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>Gotham fue fundada</strong> por un grupo de mercaderes noruegos de la misma forma que Nueva York nació de mano 
+								de comerciantes holandeses. En ambas historias la ciudad terminaría cayendo a manos de los británicos. </p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -36,29 +37,37 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>Conectividad y tecnología</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p><strong>Nuestra mayor preocupación</strong> es que disfrutes de tu estancia en Gotham. Para ello, en cualquiera de nuestras estancias
+								cuentas con todo lo necesario para pasar las mejores vacaciones de tu vida. Se te facilitarán los siguientes servicios:
+							</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
+								<li class="icon solid fa-laptop">Ordenador portátil</li>
+								<li class="icon solid fa-bolt">Energía ininterrumpida</li>
+								<li class="icon solid fa-signal">Cobertura garantizada</li>
+								<li class="icon solid fa-cog">Configuración de las condiciones</li>
+								<li class="icon solid fa-map-marker-alt">Mapa con ubicación en tiempo real</li>
+								<li class="icon solid fa-code">Página web para más información</li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p>
+								Puedes preguntarnos por información o por más servicios que contratar para un mayor disfrute de la estancia en la ciudad.
+							</p>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
+							<h2>Arquitectura única</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>La idea de "estilo Gotham"</strong> de los escritores coincide con partes del <strong>Renacimiento gótico.</strong>
+								Destacan sus contrafuertes voladores de múltiples niveles en las catedrales, o la enorme estatua de Art Deco y Art Nouveau.
+								la persona citada como influyente en la promoción de la arquitectura única de Gotham City durante la era anterior a la Guerra Civil 
+								estadounidense fue el juez Solomon Wayne, el antepasado de Bruce Wayne.
+							</p>
 
 							<!-- Section -->
 								<section>
