Home and services

--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -31,7 +31,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img style="height: 100%; width: 100%" src="img/favicon.png" alt="">
+                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -40,9 +40,9 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="active" href="index.html">Inicio</a></li>
-                                        <li><a href="about.html">Servicios</a></li>
-                                        <li><a href="project.html">Localización</a></li>
-                                        <li><a href="service.html">Acerca de nosotros</a></li>
+                                        <li><a href="service.html">Servicios</a></li>
+                                        <li><a href="location.html">Localización</a></li>
+                                        <li><a href="about.html">Acerca de nosotros</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -84,29 +84,35 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-md-6">
                     <div class="about_thumb">
-                        <img src="img/about/1.png" alt="">
+                        <img src="img/gotham-city-poster.jpg" alt="">
                         <div class="exprience">
-                            <h1>25</h1>
-                            <span>Years of Experience</span>
+                            <h1>+40</h1>
+                            <span>Lugares emblemáticos</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-5 offset-xl-1 col-md-6">
                     <div class="about_info">
                         <div class="section_title">
-                            <span class="sub_heading">About Us</span>
-                            <h3>Architechtural plan <br>
-                                design and build</h3>
+                            <span class="sub_heading">Sobre la ciudad</span>
+                            <h3>Historia y arquitectura</h3>
                             <div class="seperator"></div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis. </p>
+                        <p>
+                            Gotham fue fundada por un grupo de mercaderes noruegos de la misma forma que Nueva York nació de mano de comerciantes holandeses. 
+                            En ambas historias la ciudad terminaría cayendo a manos de los británicos.
+                        </p>
+                        <p>
+                            La idea de "estilo Gotham" de los escritores coincide con partes del Renacimiento gótico. 
+                            Destacan sus contrafuertes voladores de múltiples niveles en las catedrales, o la enorme estatua de Art Deco y Art Nouveau. 
+                            La persona citada como influyente en la promoción de la arquitectura única de Gotham City durante la era anterior a la Guerra Civil 
+                            estadounidense fue el juez Solomon Wayne, el antepasado de Bruce Wayne. 
+                        </p>
                         <ul class="about_list">
-                            <li>Consectetur adipiscing sed do eiusmod. </li>
-                            <li>Eiusmod tempor incididunt labore. </li>
+                            <li>Fundada en 1635. </li>
+                            <li>Ciudad moderna y en constante evolución. </li>
                         </ul>
-                        <a href="#" class="boxed-btn">ABOUT US</a>
+                        <a href="project.html" class="boxed-btn">Localización</a>
                     </div>
                 </div>
             </div>
@@ -120,8 +126,8 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title text-center mb-95">
-                        <span class="sub_heading">About Us</span>
-                        <h3>Make your Dream with US</h3>
+                        <span class="sub_heading">Sobre nosotros</span>
+                        <h3>Haz realidad tus vacaciones soñadas</h3>
                     </div>
                 </div>
             </div>
@@ -131,9 +137,10 @@
                         <div class="thumb">
                             <img src="img/dream/1.png" alt="">
                         </div>
-                        <h3>Interior</h3>
-                        <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua quis ipsum suspendisse.</p>
+                        <h3>Hotel</h3>
+                        <p>La estancia en el mejor hotel de la ciudad. Dispones del servicio completo que ofrece el hotel
+                            para tu completo disfrute y aprovechamiento.
+                        </p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -141,9 +148,10 @@
                         <div class="thumb">
                             <img src="img/dream/2.png" alt="">
                         </div>
-                        <h3>Exterior</h3>
-                        <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua quis ipsum suspendisse.</p>
+                        <h3>Tours</h3>
+                        <p>Podrás visitar la ciudad con nuestros tours. Contamos con los mejores guías de ciudad que estarán encantados de
+                            explicarte toda la historia y detalles que ocultan los edificios de la ciudad.
+                        </p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -151,15 +159,16 @@
                         <div class="thumb">
                             <img src="img/dream/3.png" alt="">
                         </div>
-                        <h3>Bridge</h3>
-                        <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua quis ipsum suspendisse.</p>
+                        <h3>Actividades</h3>
+                        <p>Tienes a tu disposición una gran variedad de actividades que puedes realizar para complementar
+                            tus vacaciones ideales.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <!-- dream_service_end -->
 
     <!-- JS here -->
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
