--- a/Multimedia-Practica3/about.html
+++ b/Multimedia-Practica3/about.html
@@ -99,7 +99,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-md-6">
                     <div class="about_thumb">
-                        <img src="img/about/1.png" alt="">
+                        <img src="img/about/1.jpg" alt="">
                         <div class="exprience">
                             <h1>25</h1>
                             <span>Years of Experience</span>
