--- a/Multimedia-Practica3/service.html
+++ b/Multimedia-Practica3/service.html
@@ -40,7 +40,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="">
+                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -48,31 +48,17 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">home</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="project.html">Projects</a></li>
-                                        <li><a href="service.html">Services</a></li>
-
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="single-blog.html">single-blog</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="project-details.html">project-details</a></li>
-                                                <li><a href="elements.html">elements</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a class="active" href="index.html">Inicio</a></li>
+                                        <li><a href="service.html">Servicios</a></li>
+                                        <li><a href="location.html">Localización</a></li>
+                                        <li><a href="about.html">Acerca de nosotros</a></li>
                                     </ul>
                                 </nav>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="get_in_tauch">
-                                <a href="#" class="boxed-btn">GET IN TOUCH</a>
+                                <a href="#" class="boxed-btn">Contáctanos</a>
                             </div>
                         </div>
                         <div class="col-12">
@@ -88,19 +74,19 @@
     <!-- breadcam_area_start -->
     <div class="breadcam_area bradcam_bg overlay2">
         <div class="bradcam_text">
-            <h3>Services</h3>
+            <h3>Servicios</h3>
         </div>
     </div>
     <!-- breadcam_area_end -->
 
     <!-- dream_service_start -->
-    <div class="dream_service extra_padding2">
+    <div class="dream_service">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title text-center mb-95">
-                        <span class="sub_heading">About Us</span>
-                        <h3>Make your Dream with US</h3>
+                        <span class="sub_heading">Sobre nosotros</span>
+                        <h3>Haz realidad tus vacaciones soñadas</h3>
                     </div>
                 </div>
             </div>
@@ -110,9 +96,10 @@
                         <div class="thumb">
                             <img src="img/dream/1.png" alt="">
                         </div>
-                        <h3>Interior</h3>
-                        <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua quis ipsum suspendisse.</p>
+                        <h3>Hotel</h3>
+                        <p>La estancia en el mejor hotel de la ciudad. Dispones del servicio completo que ofrece el hotel
+                            para tu completo disfrute y aprovechamiento.
+                        </p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -120,9 +107,10 @@
                         <div class="thumb">
                             <img src="img/dream/2.png" alt="">
                         </div>
-                        <h3>Exterior</h3>
-                        <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua quis ipsum suspendisse.</p>
+                        <h3>Tours</h3>
+                        <p>Podrás visitar la ciudad con nuestros tours. Contamos con los mejores guías de ciudad que estarán encantados de
+                            explicarte toda la historia y detalles que ocultan los edificios de la ciudad.
+                        </p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -130,9 +118,10 @@
                         <div class="thumb">
                             <img src="img/dream/3.png" alt="">
                         </div>
-                        <h3>Bridge</h3>
-                        <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua quis ipsum suspendisse.</p>
+                        <h3>Actividades</h3>
+                        <p>Tienes a tu disposición una gran variedad de actividades que puedes realizar para complementar
+                            tus vacaciones ideales.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -146,221 +135,32 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-md-6">
                     <div class="about_thumb">
-                        <img src="img/about/1.png" alt="">
-                        <div class="exprience">
-                            <h1>25</h1>
-                            <span>Years of Experience</span>
-                        </div>
+                        <img src="img/about/1.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-xl-5 offset-xl-1 col-md-6">
                     <div class="about_info">
                         <div class="section_title">
-                            <span class="sub_heading">About Us</span>
-                            <h3>Architechtural plan <br>
-                                design and build</h3>
+                            <span class="sub_heading">Experiencia única</span>
+                            <h3>Conduce el Batmóvil</h3>
                             <div class="seperator"></div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis. </p>
+                        <p>Tendrás la oportunidad de disfrutar de una experiencia única: conducir el
+                            auténtico Batmóvil. El automóvil tiene motor LS1 V8 de un Chevrolet Corvette, 
+                            cambio automático de seis relaciones, carrocería fabricada en fibra de carbono 
+                            con una carlinga que se retira hacia atrás para acceder al interior y es totalmente funcional. 
+                            También cuenta con ocho cámaras que muestran las imágenes del exterior en cuatro pantallas 
+                            dentro de la cabina, luces LED y Bluetooth entre otras comodidades. </p>
                         <ul class="about_list">
-                            <li>Consectetur adipiscing sed do eiusmod. </li>
-                            <li>Eiusmod tempor incididunt labore. </li>
+                            <li>Valorado en 390.000 euros. </li>
+                            <li>500 CV de potencia. </li>
                         </ul>
-                        <a href="#" class="boxed-btn">ABOUT US</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- about_area_end -->
-
-    <!-- testmonial_area_start -->
-    <div class="testmonial_area testimonial_bg overlay2">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="testmonial_active owl-carousel">
-                        <div class="single_testmonial">
-                            <div class="testmonial_info text-center">
-                                <div class="author">
-                                    <img src="img/testmonial/author.png" alt="">
-                                </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor
-                                    incididunt ut
-                                    <br> labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
-                                    Risus
-                                    commodo
-                                    viverra <br> maecenas accumsan lacus vel facilisis. </p>
-                                <div class="author_name">
-                                    <h4>-MITHILA</h4>
-                                    <span> Designer at Colorlib</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_testmonial">
-                            <div class="testmonial_info text-center">
-                                <div class="author">
-                                    <img src="img/testmonial/author.png" alt="">
-                                </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor
-                                    incididunt ut
-                                    <br> labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
-                                    Risus
-                                    commodo
-                                    viverra <br> maecenas accumsan lacus vel facilisis. </p>
-                                <div class="author_name">
-                                    <h4>-MITHILA</h4>
-                                    <span> Designer at Colorlib</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_testmonial">
-                            <div class="testmonial_info text-center">
-                                <div class="author">
-                                    <img src="img/testmonial/author.png" alt="">
-                                </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor
-                                    incididunt ut
-                                    <br> labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
-                                    Risus
-                                    commodo
-                                    viverra <br> maecenas accumsan lacus vel facilisis. </p>
-                                <div class="author_name">
-                                    <h4>-MITHILA</h4>
-                                    <span> Designer at Colorlib</span>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- testmonial_area_end -->
-
-    <!-- messege_area_start -->
-    <div class="messege_area">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-xl-6 col-md-6">
-                    <div class="messege_thumb">
-                        <img src="img/testmonial/mesege.png" alt="">
-                    </div>
-                </div>
-                <div class="col-xl-5 offset-xl-1 col-md-6">
-                    <div class="section_title mb-20">
-                        <span class="sub_heading">Contact Us</span>
-                        <h3>Send your message</h3>
-                        <div class="seperator"></div>
-                    </div>
-                    <form action="#" class="messege">
-                        <input type="email" placeholder="Your Email">
-                        <input type="text" placeholder="Subject">
-                        <textarea placeholder="Messege"></textarea>
-                        <button class="boxed-btn">SEND US</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- messege_area_end -->
-
-    <!-- footer_start -->
-    <footer class="footer footer_bg">
-        <div class="footer_top">
-            <div class="container-fluid p-0">
-                <div class="row no-gutters ">
-                    <div class="col-xl-3 col-12 col-md-4">
-                        <div class="footer_widget">
-                            <div class="footer_logo">
-                                <a href="index.html">
-                                    <img src="img/footer-logo.png" alt="">
-                                </a>
-                            </div>
-                            <ul class="social_links">
-                                <li>
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fa fa-instagram"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-xl-9 col-12 col-md-8">
-                        <div class="footer_header d-flex justify-content-between">
-                            <div class="footer_header_left">
-                                <h3>Do youn have any project or Query ?</h3>
-                                <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt. </p>
-                            </div>
-                            <div class="footer_btn">
-                                <a href="#" class="boxed-btn2">Contact Us</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xl-8 col-12 col-md-12">
-                                <div class="row">
-                                    <div class="col-xl-4 col-12 col-md-4">
-                                        <div class="footer_widget">
-                                            <h3 class="footer_heading">
-                                                Navigation
-                                            </h3>
-                                            <ul class="quick_links">
-                                                <li><a href="#">Home</a></li>
-                                                <li><a href="#"> About</a></li>
-                                                <li><a href="#"> Project</a></li>
-                                                <li><a href="#">Services</a></li>
-                                                <li><a href="#">Blog</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-4 col-12 col-md-4">
-                                        <div class="footer_widget">
-                                            <h3 class="footer_heading">
-                                                Services
-                                            </h3>
-                                            <ul class="quick_links">
-                                                <li><a href="#">Interior</a></li>
-                                                <li><a href="#"> Exterior</a></li>
-                                                <li><a href="#"> Bridge</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-4 col-12 col-md-4 ">
-                                        <div class="footer_widget">
-                                            <h3 class="footer_heading">
-                                                Speak Now
-                                            </h3>
-                                            <ul class="quick_links">
-                                                <li><a href="#">+10 267 3567 267</a></li>
-                                                <li><a href="#"> contact@ararat.com</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer_copy_right">
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </p>
-        </div>
-    </footer>
-    <!-- footer_end -->
-
 
     <!-- JS here -->
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
