Location and about us

--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -49,7 +49,7 @@
                         </div>
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="get_in_tauch">
-                                <a href="#" class="boxed-btn">Contáctanos</a>
+                                <a href="about.html" class="boxed-btn">Contáctanos</a>
                             </div>
                         </div>
                         <div class="col-12">
@@ -112,7 +112,7 @@
                             <li>Fundada en 1635. </li>
                             <li>Ciudad moderna y en constante evolución. </li>
                         </ul>
-                        <a href="project.html" class="boxed-btn">Localización</a>
+                        <a href="location.html" class="boxed-btn">Localización</a>
                     </div>
                 </div>
             </div>
