--- a/Multimedia-Practica3/location.html
+++ b/Multimedia-Practica3/location.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Ararat</title>
+    <title>Gotham</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -58,7 +58,7 @@
                         </div>
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="get_in_tauch">
-                                <a href="#" class="boxed-btn">Contáctanos</a>
+                                <a href="about.html" class="boxed-btn">Contáctanos</a>
                             </div>
                         </div>
                         <div class="col-12">
@@ -79,7 +79,7 @@
     </div>
     <!-- breadcam_area_end -->
 
-<!-- ================ contact section start ================= -->
+<!-- ================ location section start ================= -->
 <section class="contact-section">
         <div class="container">
             <div class="d-none d-sm-block mb-5 pb-4">
