--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Gotham Ciudad De Vacaciones</title>
-    <meta name="description" content="">
+    <meta name="description" content="La ciudad de Gotham es única en el mundo, llena de servicios y oportunidades para
+    pasar unas vacaciones soñadas">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
@@ -31,7 +32,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="">
+                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="Logo Gotham">
                                 </a>
                             </div>
                         </div>
@@ -84,7 +85,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-md-6">
                     <div class="about_thumb">
-                        <img src="img/gotham-city-poster.jpg" alt="">
+                        <img src="img/gotham-city-poster.jpg" alt="Gotham City">
                         <div class="exprience">
                             <h1>+40</h1>
                             <span>Lugares emblemáticos</span>
@@ -135,7 +136,7 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_dream text-center">
                         <div class="thumb">
-                            <img src="img/dream/1.png" alt="">
+                            <img src="img/dream/1.png" alt="Hotel de Gotham">
                         </div>
                         <h3>Hotel</h3>
                         <p>La estancia en el mejor hotel de la ciudad. Dispones del servicio completo que ofrece el hotel
@@ -146,7 +147,7 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_dream text-center">
                         <div class="thumb">
-                            <img src="img/dream/2.png" alt="">
+                            <img src="img/dream/2.png" alt="Tour Gotham">
                         </div>
                         <h3>Tours</h3>
                         <p>Podrás visitar la ciudad con nuestros tours. Contamos con los mejores guías de ciudad que estarán encantados de
@@ -157,7 +158,7 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_dream text-center">
                         <div class="thumb">
-                            <img src="img/dream/3.png" alt="">
+                            <img src="img/dream/3.png" alt="Actividades Gotham">
                         </div>
                         <h3>Actividades</h3>
                         <p>Tienes a tu disposición una gran variedad de actividades que puedes realizar para complementar
