--- a/Multimedia-Practica3/location.html
+++ b/Multimedia-Practica3/location.html
@@ -4,15 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gotham</title>
-    <meta name="description" content="">
+    <title>Gotham Ciudad De Vacaciones</title>
+    <meta name="description" content="La ciudad de Gotham es única en el mundo, llena de servicios y oportunidades para
+    pasar unas vacaciones soñadas">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- <link rel="manifest" href="site.webmanifest"> -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-    <!-- Place favicon.ico in the root directory -->
 
-    <!-- CSS here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -23,15 +21,9 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
 <body>
-    <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
-
-    <!-- header-start -->
     <header>
         <div class="header-area ">
             <div id="sticky-header" class="main-header-area white-bg">
@@ -40,7 +32,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="">
+                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="Logo Gotham">
                                 </a>
                             </div>
                         </div>
@@ -69,17 +61,13 @@
             </div>
         </div>
     </header>
-    <!-- header-end -->
 
-    <!-- breadcam_area_start -->
     <div class="breadcam_area bradcam_bg overlay2">
         <div class="bradcam_text">
             <h3>Localización</h3>
         </div>
     </div>
-    <!-- breadcam_area_end -->
 
-<!-- ================ location section start ================= -->
 <section class="contact-section">
         <div class="container">
             <div class="d-none d-sm-block mb-5 pb-4">
