--- a/Multimedia-Practica3/service.html
+++ b/Multimedia-Practica3/service.html
@@ -4,15 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gotham</title>
-    <meta name="description" content="">
+    <title>Gotham Ciudad De Vacaciones</title>
+    <meta name="description" content="La ciudad de Gotham es única en el mundo, llena de servicios y oportunidades para
+    pasar unas vacaciones soñadas">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- <link rel="manifest" href="site.webmanifest"> -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-    <!-- CSS here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -23,15 +19,9 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
 <body>
-    <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
-
-    <!-- header-start -->
     <header>
         <div class="header-area ">
             <div id="sticky-header" class="main-header-area white-bg">
@@ -40,7 +30,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="">
+                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="Logo Gotham">
                                 </a>
                             </div>
                         </div>
@@ -69,17 +59,11 @@
             </div>
         </div>
     </header>
-    <!-- header-end -->
-
-    <!-- breadcam_area_start -->
     <div class="breadcam_area bradcam_bg overlay2">
         <div class="bradcam_text">
             <h3>Servicios</h3>
         </div>
     </div>
-    <!-- breadcam_area_end -->
-
-    <!-- dream_service_start -->
     <div class="dream_service">
         <div class="container">
             <div class="row">
@@ -94,7 +78,7 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_dream text-center">
                         <div class="thumb">
-                            <img src="img/dream/1.png" alt="">
+                            <img src="img/dream/1.png" alt="Hotel de Gotham">
                         </div>
                         <h3>Hotel</h3>
                         <p>La estancia en el mejor hotel de la ciudad. Dispones del servicio completo que ofrece el hotel
@@ -105,7 +89,7 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_dream text-center">
                         <div class="thumb">
-                            <img src="img/dream/2.png" alt="">
+                            <img src="img/dream/2.png" alt="Tour Gotham">
                         </div>
                         <h3>Tours</h3>
                         <p>Podrás visitar la ciudad con nuestros tours. Contamos con los mejores guías de ciudad que estarán encantados de
@@ -116,7 +100,7 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_dream text-center">
                         <div class="thumb">
-                            <img src="img/dream/3.png" alt="">
+                            <img src="img/dream/3.png" alt="Actividades Gotham">
                         </div>
                         <h3>Actividades</h3>
                         <p>Tienes a tu disposición una gran variedad de actividades que puedes realizar para complementar
@@ -135,7 +119,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-md-6">
                     <div class="about_thumb">
-                        <img src="img/about/1.jpg" alt="">
+                        <img src="img/about/1.jpg" alt="Conducir Batmovil">
                     </div>
                 </div>
                 <div class="col-xl-5 offset-xl-1 col-md-6">
@@ -160,14 +144,11 @@
             </div>
         </div>
     </div>
-    <!-- about_area_end -->
 
-    <!-- JS here -->
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
     <script src="js/isotope.pkgd.min.js"></script>
     <script src="js/ajax-form.js"></script>
     <script src="js/waypoints.min.js"></script>
@@ -181,8 +162,6 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/plugins.js"></script>
 
-    <!--contact js-->
-    <script src="js/contact.js"></script>
     <script src="js/jquery.ajaxchimp.min.js"></script>
     <script src="js/jquery.form.js"></script>
     <script src="js/jquery.validate.min.js"></script>
