--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -9,7 +9,7 @@
     pasar unas vacaciones soñadas">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Gotham, vacaciones, ciudad, batman, Batman, Joker, joker,
-     verano, batmovil, conduccion, aventura, murciélago, Guasón, villano, diversión, superhéroes, superheroe"/>
+     verano, batmovil, conduccion, aventura, murciélago, Guasón, villano, diversión, superhéroes, superheroe, home"/>
     <meta name="home" content="index, follow"/>
 
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
