--- a/Multimedia-Practica3/service.html
+++ b/Multimedia-Practica3/service.html
@@ -9,7 +9,8 @@
     pasar unas vacaciones soñadas">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Gotham, vacaciones, ciudad, batman, Batman, Joker, joker,
-     verano, batmovil, conduccion, aventura, murciélago, Guasón, villano, diversión, superhéroes, superheroe"/>
+     verano, batmovil, conduccion, aventura, murciélago, Guasón, villano, diversión, superhéroes, superheroe, servicios,
+    hoteles, tour, actividades"/>
     <meta name="services" content="index, follow"/>
 
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
