--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -42,10 +42,10 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">Inicio</a></li>
-                                        <li><a href="service.html">Servicios</a></li>
-                                        <li><a href="location.html">Localización</a></li>
-                                        <li><a href="about.html">Acerca de nosotros</a></li>
+                                        <li><a class="focus-button" href="index.html">Inicio</a></li>
+                                        <li><a class="focus-button"href="service.html">Servicios</a></li>
+                                        <li><a class="focus-button"href="location.html">Localización</a></li>
+                                        <li><a class="focus-button"href="about.html">Acerca de nosotros</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -64,7 +64,6 @@
         </div>
     </header>
 
-    <!-- slider_area_start -->
     <div class="slider_area">
         <div class="slider_active owl-carousel">
             <div class="single_slider overlay2 d-flex align-items-center justify-content-center slider_bg_1">
@@ -121,9 +120,6 @@
             </div>
         </div>
     </div>
-    <!-- about_area_end -->
-
-    <!-- dream_service_start -->
     <div class="dream_service">
         <div class="container">
             <div class="row">
@@ -171,9 +167,6 @@
             </div>
         </div>
     </div>
-    <!-- dream_service_end -->
-
-    <!-- JS here -->
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -192,8 +185,6 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/plugins.js"></script>
 
-    <!--contact js-->
-    <script src="js/contact.js"></script>
     <script src="js/jquery.ajaxchimp.min.js"></script>
     <script src="js/jquery.form.js"></script>
     <script src="js/jquery.validate.min.js"></script>
