--- a/Multimedia-Practica3/location.html
+++ b/Multimedia-Practica3/location.html
@@ -43,7 +43,7 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">Inicio</a></li>
+                                        <li><a class="focus-button" href="index.html">Inicio</a></li>
                                         <li><a href="service.html">Servicios</a></li>
                                         <li><a href="location.html">Localización</a></li>
                                         <li><a href="about.html">Acerca de nosotros</a></li>
@@ -105,9 +105,7 @@
             </div>
         </div>
     </section>
-<!-- ================ contact section end ================= -->
 
-    <!-- JS here -->
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -126,8 +124,6 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/plugins.js"></script>
 
-    <!--contact js-->
-    <script src="js/contact.js"></script>
     <script src="js/jquery.ajaxchimp.min.js"></script>
     <script src="js/jquery.form.js"></script>
     <script src="js/jquery.validate.min.js"></script>
