--- a/Multimedia-Practica3/service.html
+++ b/Multimedia-Practica3/service.html
@@ -43,7 +43,7 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">Inicio</a></li>
+                                        <li><a href="index.html">Inicio</a></li>
                                         <li><a href="service.html">Servicios</a></li>
                                         <li><a href="location.html">Localización</a></li>
                                         <li><a href="about.html">Acerca de nosotros</a></li>
@@ -116,9 +116,7 @@
             </div>
         </div>
     </div>
-    <!-- dream_service_end -->
 
-    <!-- about_area_start -->
     <div class="about_area extra_padding">
         <div class="container">
             <div class="row align-items-center">
