--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="es">
 
 <head>
     <meta charset="utf-8">
@@ -30,7 +30,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="Logo Gotham">
+                                    <img class="logo-img" src="img/favicon.png" alt="Logo Gotham">
                                 </a>
                             </div>
                         </div>
