--- a/Multimedia-Practica3/service.html
+++ b/Multimedia-Practica3/service.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="es">
 
 <head>
     <meta charset="utf-8">
@@ -16,7 +16,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -29,7 +31,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="Logo Gotham">
+                                    <img class="logo-img" src="img/favicon.png" alt="Logo Gotham">
                                 </a>
                             </div>
                         </div>
@@ -146,7 +148,7 @@
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.slicknav.min.js"></script>
 
     <script src="js/main.js"></script>
