--- a/Multimedia-Practica3/location.html
+++ b/Multimedia-Practica3/location.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/themify-icons.css">
 </head>
 
 <body>
@@ -69,9 +70,10 @@
 
 <section class="contact-section">
         <div class="container">
-            <div class="d-none d-sm-block mb-5 pb-4">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26359294.213879213!2d-113.71754000532059!3d36.247089826313314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sEstados%20Unidos!5e0!3m2!1ses!2ses!4v1586598707737!5m2!1ses!2ses" width="1100" height="450" frameborder="0"></iframe>
-            </div>
+                <div class="embed-container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26359294.213879213!2d-113.71754000532059!3d36.247089826313314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sEstados%20Unidos!5e0!3m2!1ses!2ses!4v1586598707737!5m2!1ses!2ses"
+                            frameborder="0" allowfullscreen></iframe>
+                </div>
 
 
             <div class="row">
