--- a/Multimedia-Practica3/about.html
+++ b/Multimedia-Practica3/about.html
@@ -31,7 +31,8 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img class="logo-img" src="img/favicon.png" alt="Logo Gotham">
+                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="Logo Gotham" longdesc="#desc-favicon">
+                                    <div id=desc-favicon class="longdesc">Logo de del murciélago perteneciente a Batman</div>
                                 </a>
                             </div>
                         </div>
@@ -71,7 +72,8 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-md-6">
                     <div class="messege_thumb">
-                        <img src="img/testmonial/mesege.png" alt="Construcción web">
+                        <img src="img/testmonial/mesege.png" alt="Construcción web" longdesc="desc-about-pic">
+                        <div id=desc-about-pic class="longdesc">Arquitectos trabajando sobre un plano</div>
                     </div>
                 </div>
                 <div class="col-xl-5 offset-xl-1 col-md-6">
