--- a/Multimedia-Practica3/location.html
+++ b/Multimedia-Practica3/location.html
@@ -32,7 +32,8 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img class="logo-img" src="img/favicon.png" alt="Logo Gotham">
+                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="Logo Gotham" longdesc="#desc-favicon">
+                                    <div id=desc-favicon class="longdesc">Logo de del murciélago perteneciente a Batman</div>
                                 </a>
                             </div>
                         </div>
