--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="es">
+<html class="no-js" lang="zxx">
 
 <head>
     <meta charset="utf-8">
@@ -30,7 +30,8 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img class="logo-img" src="img/favicon.png" alt="Logo Gotham">
+                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="Logo Gotham" longdesc="#desc-favicon">
+                                    <div id=desc-favicon class="longdesc">Logo de del murciélago perteneciente a Batman</div>
                                 </a>
                             </div>
                         </div>
@@ -82,9 +83,10 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-md-6">
                     <div class="about_thumb">
-                        <img src="img/gotham-city-poster.jpg" alt="Gotham City">
+                        <img src="img/gotham-city-poster.jpg" alt="Gotham City" longdesc="#desc-gotham-poster">
+                        <div id=desc-gotham-poster class="longdesc">Póster de la ciudad de Gotham</div>
                         <div class="exprience">
-                            <h1>+40</h1>
+                            <div class="title">+40</div>
                             <span>Lugares emblemáticos</span>
                         </div>
                     </div>
@@ -130,7 +132,8 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_dream text-center">
                         <div class="thumb">
-                            <img src="img/dream/1.png" alt="Hotel de Gotham">
+                            <img src="img/dream/1.png" alt="Hotel de Gotham" longdesc="#desc-dream1">
+                            <div id=desc-dream1 class="longdesc">Habitación del hotel de Gotham</div>
                         </div>
                         <h3>Hotel</h3>
                         <p>La estancia en el mejor hotel de la ciudad. Dispones del servicio completo que ofrece el hotel
@@ -141,7 +144,8 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_dream text-center">
                         <div class="thumb">
-                            <img src="img/dream/2.png" alt="Tour Gotham">
+                            <img src="img/dream/2.png" alt="Tour Gotham" longdesc="#desc-dream2">
+                            <div id=desc-dream2 class="longdesc">Imagen aérea de la ciudad de Gotham</div>
                         </div>
                         <h3>Tours</h3>
                         <p>Podrás visitar la ciudad con nuestros tours. Contamos con los mejores guías de ciudad que estarán encantados de
@@ -152,7 +156,8 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_dream text-center">
                         <div class="thumb">
-                            <img src="img/dream/3.png" alt="Actividades Gotham">
+                            <img src="img/dream/3.png" alt="Actividades Gotham" longdesc="#desc-dream3">
+                            <div id=desc-dream3 class="longdesc">Batman y Robin haciendo escalada</div>
                         </div>
                         <h3>Actividades</h3>
                         <p>Tienes a tu disposición una gran variedad de actividades que puedes realizar para complementar
